# sick_lidar_fusion_project

./: README.md
install/: local_setup.sh  setup.sh
install/cam_lidar_fusion/lib/cam_lidar_fusion/: fusion_node
install/cam_lidar_fusion/share/cam_lidar_fusion/: package.ps1  package.sh  package.zsh
log/: latest_list
model/: obstacle_v2.json  obstacle_v2.xml
src/cam_lidar_fusion/: package.xml  setup.cfg  setup.py
src/cam_lidar_fusion/blob_model/: cow_v1_320.json  cow_v1_320.xml  obstacle_v2_320.json  obstacle_v2_320.xml  shelf_picker_robot_v2_320.json  shelf_picker_robot_v2_320.xml  shelf_picker_v3_320.json  shelf_picker_v3_320.xml  shelf_picker_v4_320.json  shelf_picker_v4_320.xml
src/cam_lidar_fusion/cam_lidar_fusion/: camera_calibration.py  fusion_node.py  oak_d_camera_calibration.py  oak_test.py
src/cam_lidar_fusion/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/cam_lidar_fusion/install/cam_lidar_fusion/lib/cam_lidar_fusion/: lidar_subscriber
src/cam_lidar_fusion/install/cam_lidar_fusion/share/cam_lidar_fusion/: package.bash  package.dsv  package.sh
src/cam_lidar_fusion/log/: latest_build
